syntax = "proto3";              
//Fenni
option java_package = "emu.lunarcore.proto";

import "MsgType.proto";

message Chat {
    uint32 emote = 14;
    MsgType msg_type = 10;
    uint32 sender_uid = 13;
    uint64 sent_time = 6;
    string text = 15;
}
