syntax = "proto3";

option java_package = "emu.lunarcore.proto";

import "SimpleInfo.proto";

message FriendApplyInfo {
	SimpleInfo simple_info = 8;
	int64 apply_time = 10;
}

