syntax = "proto3";              
//Fenni
option java_package = "emu.lunarcore.proto";

import "SimpleInfo.proto";
import "FriendListInfo.proto";

message GetFriendListInfoScRsp {
	repeated SimpleInfo simple_info_list = 10;
	repeated FriendListInfo friend_list = 1;
	uint32 retcode = 3;
}