syntax = "proto3";              
//Fenni
option java_package = "emu.lunarcore.proto";

message GetFriendLoginInfoScRsp {
	uint32 retcode = 3;
	repeated uint32 friend_uid_list = 12;//8

}