syntax = "proto3";

option java_package = "emu.lunarcore.proto";

import "Chat.proto";

message GetPrivateChatHistoryScRsp {
	repeated Chat chat_list = 10;
	uint32 to_uid = 12;
	uint32 sender_uid = 13;
	uint32 retcode = 4;
}

