syntax = "proto3";

option java_package = "emu.lunarcore.proto";

message MarkAvatarCsReq {
	bool is_marked = 2;
	uint32 avatar_id = 11;
}

