syntax = "proto3";

option java_package = "emu.lunarcore.proto";

import "ChatType.proto";
import "MsgType.proto";

message SendMsgCsReq {
	repeated uint32 to_uid_list = 14;
	ChatType chat_type = 10;
	MsgType msg_type = 8;
	string text = 2;
	uint32 emote = 5;
}

